<?xml version="1.0"?>
<package format="3">
  <name>guard_interfaces</name>
  <version>0.1.0</version>
  <description>Guard Inteface</description>

  <maintainer email="kdyug314@gmail.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <!-- 빌드 및 실행 종속성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- <depend>geometry_msgs</depend> -->

  <!-- 메시지 및 서비스 관련 -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- 빌드 타입 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

