<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guard_system</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rbxorns1@naver.com">pgt</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>central_controller</exec_depend>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>numpy</depend>
  <depend>cv2</depend>
  <depend>tf2_ros</depend>
  <depend>math</depend>
  <depend>VIPManagementSystem</depend>
  <depend>guard_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
